实现门诊、收费发药、库存前端以及管理部分前端页面

--- a/zft-adapter/src/main/resources/templates/insurance/insurance.html
+++ b/zft-adapter/src/main/resources/templates/insurance/insurance.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <div th:replace="~{common/common::cjbar}"/>
+    <title>医保</title>
 </head>
-<body>
+<body style="background-color: rgb(225,228,232);">
+<div th:replace="~{common/common::headbar}"/>
 
 </body>
 </html>
