--- a/zft-adapter/src/main/resources/templates/manage/manageOffices.html
+++ b/zft-adapter/src/main/resources/templates/manage/manageOffices.html
@@ -13,7 +13,12 @@
     </div>
     <div class="right">
         <div class="top">
-            <p>科室管理</p>
+            <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house-door-fill svg-text" viewBox="0 0 16 16">
+                    <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
+                </svg>
+                科室管理
+            </p>
         </div>
         <div class="info">
             <div class="info-left">
@@ -106,6 +111,8 @@
                     <div class="form-group" style="float: left;width: 350px;margin-right: 50px;">
                         <input type="text" class="form-control" name="" placeholder="请输入科室联系电话">
                     </div>
+                </div>
+                <div class="input">
                     <div class="text">
                         <span style="color: red;">* </span>科室成员
                     </div>
@@ -139,8 +146,8 @@
                     <div class="text">
                         科室介绍
                     </div>
-                    <div style="float: left;width: 350px;">
-                        <textarea class="form-control" style="resize:none;" rows="5" placeholder="请输入科室介绍"></textarea>
+                    <div style="float: left;width: 900px;">
+                        <textarea class="form-control" style="resize:none;" rows="3" placeholder="请输入科室介绍"></textarea>
                     </div>
                 </div>
             </div>
